--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat&family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/styles/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Sol Music Player</title>
   </head>
   <body>
@@ -49,7 +49,7 @@
         </div>
       </div>
     </div>
-    <script src="assets/scripts/script.js"></script>
+    <script src="script.js"></script>
   </body>
   <footer class="footer">
     <p class="copyright">© Copyright 2023 Sol Music. All rights reserved</p>
